--- a/.gitignore
+++ b/.gitignore
@@ -135,7 +135,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
+# .env
 .envrc
 .venv
 env/
@@ -203,3 +203,7 @@ __marimo__/
 .streamlit/secrets.toml
 
 .DS_Store
+
+TencentGR_1k
+
+tensorboard_logs
