--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,111 @@
+# Python 3.11.13
 absl-py==2.3.1
-filelock==3.18.0
-fsspec==2025.7.0
-grpcio==1.74.0
-Jinja2==3.1.6
-joblib==1.5.1
-Markdown==3.8.2
+anyio==4.10.0
+appnope==0.1.4
+argon2-cffi==25.1.0
+argon2-cffi-bindings==25.1.0
+arrow==1.3.0
+asttokens==3.0.0
+async-lru==2.0.5
+attrs==24.3.0
+beautifulsoup4==4.12.3
+bleach==6.2.0
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.1
+comm==0.2.2
+debugpy==1.8.11
+decorator==5.1.1
+defusedxml==0.7.1
+executing==2.1.0
+fastjsonschema==2.21.1
+filelock==3.16.1
+fqdn==1.5.1
+fsspec==2024.12.0
+grpcio==1.68.1
+idna==3.10
+ipykernel==6.29.5
+ipython==8.31.0
+ipywidgets==8.1.5
+isoduration==20.11.0
+jedi==0.19.2
+Jinja2==3.1.4
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter==1.1.1
+jupyter_client==8.6.3
+jupyter-console==6.6.3
+jupyter_core==5.7.2
+jupyter-events==0.11.0
+jupyter-lsp==2.2.5
+jupyter_server==2.14.2
+jupyter_server_terminals==0.5.3
+jupyterlab==4.3.5
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.14
+Markdown==3.8.0
 MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
+mistune==3.0.2
 mpmath==1.3.0
-networkx==3.5
-numpy==1.26.4
-packaging==25.0
-protobuf==6.31.1
-scikit-learn==1.6.1
-scipy==1.15.3
+nbclient==0.10.2
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.4.2
+notebook==7.3.2
+notebook_shim==0.2.4
+numpy==2.2.1
+overrides==7.7.0
+packaging==24.2
+pandocfilters==1.5.1
+parso==0.8.4
+pexpect==4.9.0
+pillow==11.1.0
+platformdirs==4.3.6
+prometheus_client==0.21.1
+prompt_toolkit==3.0.48
+protobuf==5.29.2
+psutil==6.1.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pycparser==2.22
+Pygments==2.19.2
+python-dateutil==2.9.0.post0
+python-json-logger==3.3.0
+PyYAML==6.0.2
+pyzmq==27.0.1
+referencing==0.36.2
+requests==2.32.4
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rfc3987-syntax==1.1.0
+rpds-py==0.26.0
+Send2Trash==1.8.3
 six==1.17.0
+sniffio==1.3.1
+soupsieve==2.7
+stack-data==0.6.3
 sympy==1.14.0
-tensorboard==2.19.0
+tensorboard==2.20.0
 tensorboard-data-server==0.7.2
-threadpoolctl==3.6.0
+terminado==0.18.1
+tinycss2==1.4.0
 torch==2.2.2
+torchaudio==2.2.2
+torchvision==0.17.2
+tornado==6.5.1
 tqdm==4.67.1
-typing_extensions==4.13.2
+traitlets==5.14.3
+types-python-dateutil==2.9.0.20250708
+typing_extensions==4.14.1
+uri-template==1.3.0
+urllib3==2.5.0
+wcwidth==0.2.13
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
 Werkzeug==3.1.3
+widgetsnbextension==4.0.14
