--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
+PROJECT_DIR = "/Users/lihangyu/Desktop/aigc"
+
 # 训练路径配置
-TRAIN_LOG_PATH=./logs
-TRAIN_TF_EVENTS_PATH=./tensorboard_logs
-TRAIN_DATA_PATH=./TencentGR_1k
-TRAIN_CKPT_PATH=./checkpoints
+TRAIN_LOG_PATH=/Users/lihangyu/Desktop/aigc/logs
+TRAIN_TF_EVENTS_PATH=/Users/lihangyu/Desktop/aigc/tensorboard_logs
+TRAIN_DATA_PATH=/Users/lihangyu/Desktop/aigc/TencentGR_1k
+TRAIN_CKPT_PATH=/Users/lihangyu/Desktop/aigc/checkpoints
