--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ TRAIN_LOG_PATH=/Users/lihangyu/Desktop/aigc/logs
 TRAIN_TF_EVENTS_PATH=/Users/lihangyu/Desktop/aigc/tensorboard_logs
 TRAIN_DATA_PATH=/Users/lihangyu/Desktop/aigc/TencentGR_1k
 TRAIN_CKPT_PATH=/Users/lihangyu/Desktop/aigc/checkpoints
+PYDEVD_WARN_SLOW_RESOLVE_TIMEOUT = 2
